Add User object; handlers; model
